# HRAgent

./: .gitignore  ASYNC_OPTIMIZATION_ANALYSIS.md  CLAUDE.md  DESIGN.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  STREAMING_COMPLETE_REPORT.md  WORKFLOW_GUIDE.md  config.py  main.py  pyproject.toml  setup.bat  setup.sh  start_service.sh  start_web.py  stop_service.sh  validate_optimization.py
docs/: README.md  streaming_implementation_plan.md
examples/: test_run.sh
examples/local_example/: test_run.sh
examples/system_example/: README.md  test_run.sh
src/: __init__.py  workflow.py  workflow_optimized.py  workflow_ultra_optimized.py
src/models/: __init__.py  data_models.py
src/nodes/: __init__.py  candidate_evaluation_node.py  report_generation_node.py  requirement_confirmation_node.py  resume_structure_node.py  scoring_dimension_node.py
src/prompts/: __init__.py  candidate_evaluation_prompts.py  report_generation_prompts.py  requirement_confirmation_prompts.py  resume_structure_prompts.py  scoring_dimension_prompts.py
src/utils/: __init__.py  resume_parser.py
web_interface/: app.py
web_interface/static/css/: style.css
web_interface/static/js/: chat.js
web_interface/templates/: index.html  result.html
